Package Helm charts via inline script
The Dapper script previously used to package charts has been deleted.

--- a/.github/workflows/release-against-test-charts.yml
+++ b/.github/workflows/release-against-test-charts.yml
@@ -153,13 +153,13 @@ jobs:
         run: |
           cd ./fleet
           fleet_version=9.9.9
-          export HELM_VERSION=$fleet_version
-          export HELM_TAG=dev # should not matter, will be overwritten by the release script anyway
 
-          # replace the version computation script to prevent our test version from being overwritten
-          echo 'echo "Skipping version computation in ./scripts/package-helm"' > ./scripts/version
-          ./scripts/package-helm
-          cd -
+          sed -i -e "s/tag:.*/tag: v$fleet_version/" charts/fleet/values.yaml
+          sed -i -e "s/tag: dev/tag: v$fleet_version/" charts/fleet-agent/values.yaml
+
+          helm package --version="$fleet_version" --app-version="$fleet_version" -d ./dist ./charts/fleet
+          helm package --version="$fleet_version" --app-version="$fleet_version" -d ./dist ./charts/fleet-crd
+          helm package --version="$fleet_version" --app-version="$fleet_version" -d ./dist ./charts/fleet-agent
 
           prev_full=$(ls -1 ./charts/charts/fleet | tail -n 1)
           prev_fleet=${prev_full#*+up}
