--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,5 +12,10 @@
   "force": {
     "constraints": {
     }
+  },
+  "postUpgradeTasks": {
+    "commands": ["go generate"],
+    "fileFilters": ["**/go.mod"],
+    "executionMode": "update"
   }
 }
